# BachelorSOA

./: .gitignore  1234.txt  README.md  Static12.csv  benchmark_results.csv  benchmark_results130150.csv  fft_nodal_dofs.csv  fft_response.csv  fft_response0axial.csv  nbodyPend Forward dynamics.py  pyproject.toml  simulation_nodes_2_links_python.csv
Development Code/: 4BodyPendulumForwardDynamics.py  TEST123.txt  fft_detected_peaks1.csv
DevelopmentCode/: PI_values.csv  fft_detected_peaks.csv  fft_detected_peaks_raw_from_csv.csv  setup.py
Flex_BD/: ATBI_Flex.py  ATBI_Flex_Grav.py  ATBI_Flex_Grav_Track.py  ATBI_Flex_Grav_Track_Rot.py  ATBI_Flex_Grav_Vec.py  ATBI_Flex_Track.py  AdamsComparison.py  Body_Properties.py  EnergyFlex.py  Hinge1_ang_acc.tab  Hinge1_ang_acc_alu.tab  ModeshapesComparison.py  MultibodySystem.py  RigidAccComparison.py  RigidFlexComparison  SOABody.py  Simulation.py  Structural_Analysis_BD_Rect.py  Structural_Analysis_CB_Rect.py  TestFlex.py  TrackTest.py  _ATBI_Flex_Grav_Backup.py  _AdamsComparison.py  _AmplitudeTest  _AmplitudeTest.py  _DeformationTest.py  _EnergyFlex.py  _Hinge1_ang_acc_alu_30.tab  _Hinge1_ang_acc_steel_30.tab  _ModeshapesComparison.py  _TestFlex.py  _TestFlex1  _Test_Comptime.py  _Test_Track.py  _cppTest.py
Flex_CB/: ATBI_Flex.py  Body_Properties.py  (+8 more)
cpp/soa_cpp_port_headeronly/: CMakeLists.txt  README.md  simulation_nodes_1_links.csv  simulation_nodes_3_links.csv  simulation_nodes_5_links.csv  simulation_wide_2_links.csv  simulation_wide_3_links.csv  simulation_wide_5_links.csv
cpp/soa_cpp_port_headeronly/build_release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja
cpp/soa_cpp_port_headeronly/examples/: example_simulation.cpp
cpp/soa_cpp_port_headeronly/scripts/: animate_beams.py  plot_csv.py
(+134 files in other folders)
